# YADRO-test-task

./: CMakeLists.txt  File_generator.cpp  File_generator.h  LICENSE  README.md  Sorter.cpp  Sorter.h  Tape.cpp  Tape.h  Tests.h  main.cpp
